# PdfWidget

./: .gitignore  .travis.yml  ChangeLog  PdfView.hpp  PdfWidget.pro  README.md  TODO
example/: CMakeLists.txt  Global.hpp  Main.cpp  TODO  example.pro
example/Core/StyleManager/: StyleManager.cpp  StyleManager.hpp
example/Core/Tools/: Tools.cpp  Tools.hpp
example/Gui/Application/: MPApplication.cpp  MPApplication.hpp  qtlocalpeer.cpp  qtlocalpeer.hpp
example/Gui/Dialogs/: Dialog.cpp  Dialog.hpp  MessageDialog.cpp  MessageDialog.hpp
example/Gui/UI/: MiniPdf.cpp  MiniPdf.hpp
example/Gui/Widgets/Buttons/: ActionButtons.cpp  ActionButtons.hpp  ButtonSet.cpp  ButtonSet.hpp
example/Gui/Widgets/FileDialog/: FileDialog.cpp  FileDialog.hpp
example/Gui/Widgets/Misc/: GuiWidgets.cpp  GuiWidgets.hpp
example/Gui/Widgets/RecentFiles/: RecentFilesWidget.cpp  RecentFilesWidget.hpp
example/Gui/Widgets/Settings/: Settings.cpp  Settings.hpp
example/Gui/Widgets/TabWidget/: TabWidget.cpp  TabWidget.hpp
example/Resources/: MiniPdf.qrc
examples/: Main.cpp  example.pro
lib/: CMakeLists.txt  Global.hpp  MuPdfDocument.cpp  MuPdfDocument.hpp  PdfDocument.cpp  PdfDocument.hpp  PdfPrinter.cpp  PdfPrinter.hpp  PdfView.cpp  PdfView.hpp  PopplerDocument.cpp  PopplerDocument.hpp  lib.pro
lib/Document/: Document.cpp  Document.hpp  Navigation.cpp  Navigation.hpp  RenderOptions.hpp  Renderer.cpp  Renderer.hpp  RendererImpl.hpp
lib/MuPdf/: MuPdfDocument.cpp  MuPdfDocument.hpp
lib/Poppler/: MuPdfDocument.cpp  MuPdfDocument.hpp  PopplerDocument.cpp  PopplerDocument.hpp
lib/View/: View.cpp  View.hpp  ViewImpl.hpp  ViewWidgets.cpp  ViewWidgets.hpp
mupdf/: Makerules  build.sh
mupdf/source/: mupdf.pro
mupdf/tools/: cmapdump  cmapdump.pro  hexdump  hexdump.pro  namedump  namedump.pro  tools.pro
